--- a/pom.xml
+++ b/pom.xml
@@ -153,6 +153,16 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.daishy</groupId>
+            <artifactId>range-slider</artifactId>
+            <version>1.1.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.vaadin.addon</groupId>
+            <artifactId>paper-range-slider</artifactId>
+            <version>1.1.3</version>
+        </dependency>
     </dependencies>
 
     <build>
