started with result page

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ server.port=${PORT:8080}
 vaadin.compatibilityMode = false
 logging.level.org.atmosphere = warn
 application.name=Taboo
+
+vaadin.proKey=davide.marcoli13@gmail.com/pro-1ccfdc23-69bf-47b0-896e-5fa835d1f401
